# xmonad-config

./: .gitignore  build  stack.yaml  xmonad-config.cabal
src/: xmonad.hs
