name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mlyean/xmonad-config
author:              Ming Yean Lim
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             xmonad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xmonad >= 0.17
                     , xmonad-contrib >= 0.17
                     , X11 >= 1.10
                     , containers >= 0.6
                     , shell-escape >= 0.2
                     , utf8-string >= 1.0
  ghc-options:         -fasm -O2 -Wall -threaded
